@@ -1,7 +1,7 @@
 #! /bin/env python
 
 VERSION = "0.0.0"
-PACKAGE = "PACKAGE"
+PACKAGE = "abc"
 TOPDIR = '/opt/PKGS'
 PKGDIR = '/opt/trunk/pkgs'
 
