@@ -1,3 +1,9 @@
+2007-01-07  Nishio Futoshi  <fut_nis@d3.dion.ne.jp>
+
+	* src/optionParse.py : new file
+	* src/DEFFILE.py.in : modify PACKAGE
+	* src/specParse.py : new file
+
 2007-01-06  Nishio Futoshi  <fut_nis@d3.dion.ne.jp>
 
 	* src/mo_get_srpm_name.py : new file
